@@ -2,8 +2,12 @@ package com.nelson.LoginAPI.config;
 
 import java.text.SimpleDateFormat;
 import java.util.Arrays;
+import java.util.List;
 import java.util.TimeZone;
 
+import lombok.AllArgsConstructor;
+import lombok.NoArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Configuration;
@@ -12,10 +16,10 @@ import com.nelson.LoginAPI.domain.User;
 import com.nelson.LoginAPI.repository.UserRepository;
 
 @Configuration
+@RequiredArgsConstructor
 public class Instantiation implements CommandLineRunner{
 
-	@Autowired
-	private UserRepository userRepository;
+	private final UserRepository userRepository;
 
 	@Override
 	public void run(String... args) throws Exception {
@@ -23,10 +27,14 @@ public class Instantiation implements CommandLineRunner{
 		sdf.setTimeZone(TimeZone.getTimeZone("GMT"));
 		
 		userRepository.deleteAll();
+
+		User maria = User.builder()
+						.id(null)
+						.name("Maria Cicera")
+						.login("MaCic")
+						.password("132456").build();
 		
-		User maria = new User(null,"Maria Cicera","MaCic","132456");
-		
-		userRepository.saveAll(Arrays.asList(maria));
+		userRepository.saveAll(List.of(maria));
 		
 	}
 }
